--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@parcel/core": "^2.10.0",
     "@types/chokidar": "^2.1.3",
     "@types/node": "^20.8.7",
+    "@types/pixi.js": "^5.0.0",
     "@types/webpack-env": "^1.18.2",
     "@types/ws": "^8.5.8",
     "chokidar": "^3.5.3",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@types/debounce": "^1.2.3",
     "nodemon": "^3.0.1",
+    "pixi.js": "^7.3.2",
     "serve-static": "^1.15.0",
     "ts-node": "^10.9.1",
     "ws": "^8.14.2"
