--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@parcel/config-default": "^2.10.0",
     "@parcel/core": "^2.10.0",
     "@types/chokidar": "^2.1.3",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
     "@types/ws": "^8.5.8",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@types/debounce": "^1.2.3",
+    "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "pixi.js": "^7.3.2",
     "serve-static": "^1.15.0",
