--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "nodemon start.ts",
     "build": "parcel build",
-    "test": "NODE_ENV=test ts-node --esm --experimentalSpecifierResolution=node src/*.test.ts",
-    "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" NODE_ENV=test nodemon --experimentalSpecifierResolution=node src/*.test.ts -w \"src/*.ts\""
+    "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
+    "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" NODE_ENV=test nodemon --transpileOnly --experimentalSpecifierResolution=node test.ts -w \"src/**/*.ts\""
   },
   "devDependencies": {
     "@parcel/config-default": "^2.10.0",
@@ -19,6 +19,7 @@
     "@types/ws": "^8.5.8",
     "chokidar": "^3.5.3",
     "debounce": "^1.2.1",
+    "glob": "^10.3.10",
     "parcel": "^2.10.0",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
