--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
   "devDependencies": {
     "@parcel/config-default": "^2.10.0",
     "@parcel/core": "^2.10.0",
-    "@types/chokidar": "^2.1.3",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
-    "@types/ws": "^8.5.8",
-    "chokidar": "^3.5.3",
-    "debounce": "^1.2.1",
     "glob": "^10.3.10",
     "parcel": "^2.10.0",
     "prettier": "^3.0.3",
@@ -27,13 +23,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/debounce": "^1.2.3",
     "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "pixi.js": "^7.3.2",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1",
-    "ws": "^8.14.2"
+    "ts-node": "^10.9.1"
   },
   "nodemonConfig": {
     "watch": [
