--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "parcel_playground",
+  "name": "zomboban",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "packageManager": "yarn@3.6.4",
-  "source": "src/index.html",
   "scripts": {
-    "start": "nodemon start.ts",
-    "build": "parcel build",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
     "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" NODE_ENV=test nodemon --transpileOnly --experimentalSpecifierResolution=node test.ts -w \"src/**/*.ts\"",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@parcel/config-default": "^2.10.0",
-    "@parcel/core": "^2.10.0",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
@@ -20,19 +19,16 @@
     "parcel": "^2.10.0",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "ts-node": "^10.9.1",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "nodemon": "^3.0.1",
-    "pixi.js": "^7.3.2",
-    "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1"
+    "pixi.js": "^7.3.2"
   },
   "nodemonConfig": {
-    "watch": [
-      "start.ts"
-    ],
     "execMap": {
       "ts": "ts-node-esm"
     }
