clean up deps and specify yarn version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zomboban",
+  "packageManager": "yarn@4.0.2+sha256.825003a0f561ad09a3b1ac4a3b3ea6207af2796d54f62a9420520915721f5186",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,7 +19,6 @@
     "@types/pixi.js": "^5.0.0",
     "glob": "^10.3.10",
     "nodemon": "^3.0.1",
-    "parcel": "^2.10.0",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
     "ts-node": "^10.9.1",
