--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
+    "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
@@ -26,8 +27,10 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "pixi.js": "^7.3.2"
+    "pixi.js": "^7.3.2",
+    "vite-express": "^0.11.1"
   },
   "nodemonConfig": {
     "execMap": {
