--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node server.ts",
+    "dev": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node watch.ts ./server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
@@ -14,12 +14,15 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
+    "@types/chokidar": "^2.1.3",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
+    "chokidar": "^3.5.3",
     "glob": "^10.3.10",
     "nodemon": "^3.0.1",
+    "picocolors": "^1.0.0",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
     "ts-node": "^10.9.1",
@@ -28,9 +31,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-serve-static-core": "^0.1.1",
     "lodash": "^4.17.21",
-    "pixi.js": "^7.3.2",
-    "vite-express": "^0.11.1"
+    "pixi.js": "^7.3.2"
   },
   "nodemonConfig": {
     "execMap": {
