--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-serve-static-core": "^0.1.1",
+    "fflate": "^0.8.1",
     "lodash": "^4.17.21",
     "pixi.js": "^7.3.2"
   },
