--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@pixi/ui": "^0.10.3",
     "express": "^4.18.2",
     "express-serve-static-core": "^0.1.1",
     "fflate": "^0.8.1",
