--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.0.3",
     "process": "^0.11.10",
     "ts-node": "^10.9.1",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   },
