--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
     "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" NODE_ENV=test nodemon --transpileOnly --experimentalSpecifierResolution=node test.ts -w \"src/**/*.ts\"",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "graph-deps": "madge --image dependency_graph_client.svg src/client.ts && madge --image dependency_graph_server.svg src/server.ts"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
     "@types/chokidar": "^2.1.3",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.200",
+    "@types/madge": "^5.0.3",
     "@types/node": "^20.8.7",
     "@types/pixi.js": "^5.0.0",
     "chokidar": "^3.5.3",
     "glob": "^10.3.10",
+    "madge": "^6.1.0",
     "nodemon": "^3.0.1",
     "picocolors": "^1.0.0",
     "prettier": "^3.0.3",
