--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node watch.ts ./src/server.ts",
+    "serve": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node ./src/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
