--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node watch.ts ./src/server.ts",
-    "serve": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node ./src/server.ts",
+    "dev": "NODE_ENV=development ts-node-esm --transpileOnly --experimentalSpecifierResolution=node watch.ts ./src/server/index.ts",
+    "serve": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node ./src/server/index.ts",
+    "signUp": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node ./signUp.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "NODE_ENV=test ts-node --transpileOnly --esm --experimentalSpecifierResolution=node test.ts",
     "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192 --trace-warnings\" NODE_ENV=test nodemon --transpileOnly --experimentalSpecifierResolution=node test.ts -w \"**/*.ts\"",
     "type-check": "tsc --noEmit",
-    "graph-deps": "madge --image dependency_graph_client.svg src/client.ts && madge --image dependency_graph_server.svg src/server.ts"
+    "graph-deps": "madge --image dependency_graph_client.svg src/client.ts && madge --image dependency_graph_server.svg src/server/index.ts"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
     "@types/chokidar": "^2.1.3",
+    "@types/cookie-parser": "^1",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1",
     "@types/lodash": "^4.14.200",
     "@types/madge": "^5.0.3",
     "@types/node": "^20.8.7",
+    "@types/passport": "^0",
+    "@types/passport-local": "^1",
+    "@types/session-file-store": "^1",
     "@types/three": "^0.161.2",
     "chokidar": "^3.5.3",
     "glob": "^10.3.10",
@@ -35,10 +41,15 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-serve-static-core": "^0.1.1",
+    "express-session": "^1.18.0",
     "fflate": "^0.8.1",
     "lodash": "^4.17.21",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
     "three": "^0.161.0",
     "vite-express": "^0.14.0"
   },
