--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "zomboban",
   "packageManager": "yarn@4.0.2+sha256.825003a0f561ad09a3b1ac4a3b3ea6207af2796d54f62a9420520915721f5186",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
+  "files": [],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "NODE_ENV=development ts-node-esm --transpileOnly --experimentalSpecifierResolution=node watch.ts ./src/server/index.ts",
     "serve": "ts-node-esm --transpileOnly --experimentalSpecifierResolution=node ./src/server/index.ts",
