--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@types/passport": "^0",
     "@types/passport-local": "^1",
     "@types/path-to-regexp": "^1.7.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/session-file-store": "^1",
     "@types/three": "^0.161.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "chokidar": "^3.5.3",
     "glob": "^10.3.10",
     "madge": "^6.1.0",
@@ -45,6 +48,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.16.1",
+    "@react-three/postprocessing": "^2.16.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-serve-static-core": "^0.1.1",
@@ -53,6 +58,9 @@
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postprocessing": "^6.35.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "session-file-store": "^1.5.0",
     "three": "^0.161.0",
     "vite-express": "^0.14.0"
