--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zomboban",
-  "packageManager": "yarn@4.0.2+sha256.825003a0f561ad09a3b1ac4a3b3ea6207af2796d54f62a9420520915721f5186",
+  "packageManager": "yarn@4.2.2",
   "version": "0.0.0",
   "type": "module",
   "files": [],
