--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express-serve-static-core": "^0.1.1",
     "express-session": "^1.18.0",
     "fflate": "^0.8.1",
+    "htmx.org": "^1.9.12",
     "lit": "^3.1.4",
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
