--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bench": "ts-node --transpileOnly --esm --experimentalSpecifierResolution=node src/benchmark.ts"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.1",
     "@tauri-apps/cli": "^1.5.6",
     "@types/chokidar": "^2.1.3",
     "@types/cookie-parser": "^1",
