--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "paths": {
-      "xui": ["./src/XUI.ts"]
+      "xui": ["./src/XUI"],
+      "xui/*": ["./src/XUI/*"]
     },
 
     /* Bundler mode */
