--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "paths": {
-      "xui": ["./src/XUI"],
-      "xui/*": ["./src/XUI/*"],
+      "Zui": ["./src/Zui"],
+      "Zui/*": ["./src/Zui/*"],
       "htmx.org": ["./src/htmx.d.ts"]
     },
 
