--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: corepack use yarn@4.2.2
+      run: corepack enable && corepack use yarn@4.2.2
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps
     - name: Run Playwright tests
