--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@playwright/test": "^1.45.1",
     "@tauri-apps/cli": "^1.5.6",
     "@types/chokidar": "^2.1.3",
+    "@types/compression": "^1",
     "@types/cookie-parser": "^1",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1",
@@ -47,6 +48,7 @@
     "vite": "^5.3.5"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cookie-store": "^4.0.0-next.4",
     "express": "^4.18.2",
