--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es6",
     "useDefineForClassFields": false,
     "experimentalDecorators": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "importHelpers": true,
     "paths": {
       "Zui": ["./src/Zui"],
       "Zui/*": ["./src/Zui/*"],
