--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -30,6 +30,8 @@ jobs:
         run: npm install
 
   test:
+    runs-on: ubuntu-latest
+    steps:
       - name: Run tests
         run: npm test
 
