--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -34,7 +34,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [install, test]
+    needs: [test]
     steps:
       - name: Build project
         run: NODE_ENV=production npm run build
