--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -32,18 +32,26 @@ jobs:
       - name: Run tests
         run: npm test
 
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Build project
         run: NODE_ENV=production npm run build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to production
         run: |
           echo "Deploying to production..."
           scp -r dist root@${{env.DROPLET_IP}}:Code/zomboban
+
