--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Deploy to production
         run: |
           echo "Deploying to production server..."
-          cat "${{ secrets.SSH_KEY }}" > /tmp/ssh_key
+          echo "${{ secrets.SSH_KEY }}" > /tmp/ssh_key
           scp -i /tmp/ssh_key -r dist root@${{ secrets.DROPLET_IP }}:/Code/zomboban
 
 
