--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -57,9 +57,8 @@ jobs:
       - name: Deploy to production
         run: |
           echo "Deploying to production server..."
-          echo DROPLET_IP=${{ secrets.DROPLET_IP }}
           echo "${{ secrets.SSH_KEY }}" > /tmp/ssh_key
           chmod 600 /tmp/ssh_key
-          scp -i /tmp/ssh_key -r dist root@24.144.94.185:/Code/zomboban
+          scp -i /tmp/ssh_key -r dist root@${{ secrets.DROPLET_IP }}:Code/zomboban
 
 
