--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -70,5 +70,4 @@ jobs:
     - name: Lighthouse
       uses: foo-software/lighthouse-check-action@master
       with:
-        fooApiToken: ${{ secrets.FOO_API_TOKEN }}
-        urls: "http://${{ secrets.DROPLET_IP }}"
+        urls: http://${{ secrets.DROPLET_IP }}
