--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "test-dev": "NODE_OPTIONS=\"--max_old_space_size=8192 --trace-warnings\" NODE_ENV=test nodemon test.ts -w \"**/*.ts\"",
     "type-check": "tsc --noEmit",
     "graph-deps": "madge --image dependency_graph_client.svg src/client.ts && madge --image dependency_graph_server.svg src/server/index.ts && madge --image dependency_graph_zui.svg src/Zui/index.ts",
-    "bench": "tsx src/benchmark.ts"
+    "bench": "tsx src/benchmark.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.1",
+    "@storybook/addon-docs": "^9.0.16",
+    "@storybook/html-vite": "^9.0.16",
     "@tauri-apps/cli": "^1.5.6",
     "@types/chokidar": "^2.1.3",
     "@types/compression": "^1",
@@ -45,6 +49,7 @@
     "picocolors": "^1.0.0",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
+    "storybook": "^9.0.16",
     "tsc-files": "^1.1.4",
     "tslib": "^2.6.3",
     "tsx": "^4.19.3",
