--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -149,33 +149,38 @@ jobs:
           scp -i /tmp/ssh_key /tmp/Caddyfile root@${{ secrets.DROPLET_IP }}:/etc/caddy/Caddyfile
           
           # Create systemd service with environment variable
+          cat > /tmp/caddy.service << 'EOSERVICE'
+          [Unit]
+          Description=Caddy
+          Documentation=https://caddyserver.com/docs/
+          After=network.target network-online.target
+          Requires=network-online.target
+          
+          [Service]
+          Type=notify
+          User=caddy
+          Group=caddy
+          Environment=DIGITAL_OCEAN_API_TOKEN=${{ secrets.DIGITAL_OCEAN_API_TOKEN }}
+          ExecStart=/usr/bin/caddy run --environ --config /etc/caddy/Caddyfile
+          ExecReload=/usr/bin/caddy reload --config /etc/caddy/Caddyfile --force
+          TimeoutStopSec=5s
+          LimitNOFILE=1048576
+          LimitNPROC=512
+          PrivateTmp=true
+          ProtectSystem=strict
+          ReadWritePaths=/var/lib/caddy
+          AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
+          
+          [Install]
+          WantedBy=multi-user.target
+          EOSERVICE
+          
+          # Deploy service file and fix formatting
+          scp -i /tmp/ssh_key /tmp/caddy.service root@${{ secrets.DROPLET_IP }}:/tmp/caddy.service
           ssh -i /tmp/ssh_key root@${{ secrets.DROPLET_IP }} "
-            # Create systemd service file for Caddy with environment variable
-            cat > /etc/systemd/system/caddy.service << 'EOSERVICE'
-[Unit]
-Description=Caddy
-Documentation=https://caddyserver.com/docs/
-After=network.target network-online.target
-Requires=network-online.target
-
-[Service]
-Type=notify
-User=caddy
-Group=caddy
-Environment=DIGITAL_OCEAN_API_TOKEN=${{ secrets.DIGITAL_OCEAN_API_TOKEN }}
-ExecStart=/usr/bin/caddy run --environ --config /etc/caddy/Caddyfile
-ExecReload=/usr/bin/caddy reload --config /etc/caddy/Caddyfile --force
-TimeoutStopSec=5s
-LimitNOFILE=1048576
-LimitNPROC=512
-PrivateTmp=true
-ProtectSystem=strict
-ReadWritePaths=/var/lib/caddy
-AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
-
-[Install]
-WantedBy=multi-user.target
-EOSERVICE
+            # Remove indentation from service file and move to correct location
+            sed 's/^          //' /tmp/caddy.service > /etc/systemd/system/caddy.service
+            rm /tmp/caddy.service
             
             # Set proper permissions on Caddyfile
             chown caddy:caddy /etc/caddy/Caddyfile
