--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "importHelpers": true,
+    "jsx": "react",
     "paths": {
       "Zui": ["./src/Zui"],
       "Zui/*": ["./src/Zui/*"],
