--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@marko/compiler": "^5.39.33",
+    "@marko/vite": "^5.3.0",
     "@playwright/test": "^1.45.1",
     "@storybook/addon-docs": "^9.0.16",
     "@storybook/html-vite": "^9.0.16",
@@ -45,6 +47,7 @@
     "concurrently": "^8.2.2",
     "glob": "^10.3.10",
     "madge": "^6.1.0",
+    "marko": "^5.37.49",
     "nodemon": "^3.0.1",
     "picocolors": "^1.0.0",
     "prettier": "^3.0.3",
@@ -57,8 +60,6 @@
     "vite": "^5.3.5"
   },
   "dependencies": {
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.8",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -68,8 +69,6 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "path-to-regexp": "^8.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "session-file-store": "^1.5.0",
     "three": "^0.178.0"
   },
